--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11060,4 +11060,62 @@
 	<item component="ComponentInfo{com.stt.android.suunto/com.stt.android.launcher.ProxyActivity}" drawable="suunto" />
 	<item component="ComponentInfo{io.devizer.pokerbase/host.exp.exponent.MainActivity}" drawable="pokerbase" />
 	<item component="ComponentInfo{com.xamisoft.japaneseguru/com.xamisoft.japaneseguru.MainActivity}" drawable="japanese_guru" />
+	<item component="ComponentInfo{com.rovio.tnt/de.chimeraentertainment.unity.UnityPlayerActivity}" drawable="angry_birds_evolution" />
+	<item component="ComponentInfo{com.rovio.angrybirdsstella/com.rovio.fusion.App}" drawable="angry_birds_stella" />
+	<item component="ComponentInfo{de.android_telefonie.appmanager/com.think_android.apps.appmonster.base.GateActivity}" drawable="appmonster"/>
+	<item component="ComponentInfo{com.think_android.apps.appmonster.cloud.free/com.think_android.apps.appmonster.base.AppMonsterBase}" drawable="appmonster"/>
+	<item component="ComponentInfo{com.think_android.appmanagerpro/com.think_android.appmanagerpro.MainActivity}" drawable="appmonster"/>
+	<item component="ComponentInfo{com.think_android.appmanagerpro/com.think_android.appmanagerpro.AppMonsterPro}" drawable="appmonster"/>
+	<item component="ComponentInfo{com.think_android.appmanagerpro/com.think_android.appmanagerpro.AppManagerPro}" drawable="appmonster"/>
+	<item component="ComponentInfo{com.think_android.appmanagerpro/com.think_android.apps.appmonster.base.AppMonsterBase}" drawable="appmonster"/>
+	<item component="ComponentInfo{com.think_android.appmanagerpro.cbe/com.think_android.appmanagerpro.cbe.AppManagerPro}" drawable="appmonster"/>
+	<item component="ComponentInfo{com.think_android.appmanagerpro.cupcake/com.think_android.appmanagerpro.cupcake.AppManagerPro}" drawable="appmonster"/>
+	<item component="ComponentInfo{com.think_android.appmanagerpros/com.think_android.appmanagerpros.AppMonsterPro}" drawable="appmonster"/>
+	<item component="ComponentInfo{installer.com.think_android.appmanagerpro/installer.com.think_android.appmanagerpro.MainActivity}" drawable="appmonster"/>
+	<item component="ComponentInfo{com.think_android.appmanagerpro/com.think_android.apps.appmonster.base.GateActivity}" drawable="appmonster"/>
+	<item component="ComponentInfo{arity.calculator/calculator.Calculator}" drawable="aritycalc"/>
+	<item component="ComponentInfo{com.asus.maxxaudio.audiowizard/com.asus.maxxaudio.audiowizard.MainActivity}" drawable="asus_audiowizard"/>
+	<item component="ComponentInfo{com.beatsportible.beats/com.beatsportible.beats.MenuHome}" drawable="beats_rhythm"/>
+	<item component="ComponentInfo{sk.maniacs.bm/sk.maniacs.bm.DirectFileActivityIAP}" drawable="beatx"/>
+	<item component="ComponentInfo{org.asafonov.blockbuster/org.asafonov.arkanoid.MainActivity}" drawable="block_buster"/>
+	<item component="ComponentInfo{com.cleverraven.cataclysmdda/com.cleverraven.cataclysmdda.SplashScreen}" drawable="cataclysm_dda"/>
+	<item component="ComponentInfo{com.chess.clock/com.chess.clock.activities.ClockTimersActivity}" drawable="chess_clock"/>
+	<item component="ComponentInfo{com.g00fy2.developerwidget/com.g00fy2.developerwidget.activities.widgetconfig.ConfigLauncherActivity}" drawable="developer_widget"/>
+	<item component="ComponentInfo{com.lima.doodlejump/com.limasky.doodlejumpandroid.MainActivity}" drawable="doodle_jump"/>
+	<item component="ComponentInfo{com.crawlmb/com.crawlmb.activity.SplashActivity}" drawable="dungeon_crawl_stone_soup"/>
+	<item component="ComponentInfo{com.github.eka2l1/com.github.eka2l1.MainActivity}" drawable="eka2l1"/>
+	<item component="ComponentInfo{org.gnu.emacs/org.gnu.emacs.EmacsActivity}" drawable="emacs"/>
+	<item component="ComponentInfo{com.github.thewierdnut.endless_mobile/com.github.thewierdnut.endless_mobile.ESActivity}" drawable="endless_sky"/>
+	<item component="ComponentInfo{com.exifthumbnailadder.app/com.exifthumbnailadder.app.MainActivity}" drawable="exif_thumbnail_adder"/>
+	<item component="ComponentInfo{de.sesu8642.feudaltactics/de.sesu8642.feudaltactics.AndroidLauncher}" drawable="feudal_tactics"/>
+	<item component="ComponentInfo{org.flare.app/org.flare.app.FLARE}" drawable="flare_rpg"/>
+	<item component="ComponentInfo{org.godotengine.editor.v3/org.godotengine.editor.GodotProjectManager}" drawable="godot"/>
+	<item component="ComponentInfo{org.godotengine.editor.v4/org.godotengine.editor.GodotProjectManager}" drawable="godot"/>
+	<item component="ComponentInfo{com.xnview.inmage/com.xnview.inmage.MainActivity}" drawable="inmage"/>
+	<item component="ComponentInfo{com.microsoft.scmx/com.microsoft.defender.ux.activity.MDMainActivity}" drawable="microsoft_defender"/>
+	<item component="ComponentInfo{com.microsoft.microsoftsolitairecollection/com.smokingguninc.engine.framework.SgiLauncherActivity}" drawable="microsoft_solitaire_collection"/>
+	<item component="ComponentInfo{com.nunti/com.nunti.MainActivity}" drawable="nunti"/>
+	<item component="ComponentInfo{qijaz221.android.rss.reader/qijaz221.android.rss.reader.SplashActivity}" drawable="pluma_rss"/>
+	<item component="ComponentInfo{com.quickcursor/com.quickcursor.android.activities.MainActivity}" drawable="quick_cursor"/>
+	<item component="ComponentInfo{de.bahnhoefe.deutschlands.bahnhofsfotos/de.bahnhoefe.deutschlands.bahnhofsfotos.MainActivity}" drawable="railway_station_photos"/>
+	<item component="ComponentInfo{de.bahnhoefe.deutschlands.bahnhofsfotos.nightly/de.bahnhoefe.deutschlands.bahnhofsfotos.MainActivity}" drawable="railway_station_photos"/>
+	<item component="ComponentInfo{com.jndapp.recticons.iconpack/com.jndapp.recticons.iconpack.activities.SplashActivity}" drawable="recticons"/>
+	<item component="ComponentInfo{sarsamurmu.resiconpack.adaptive/sarsamurmu.resiconpack.adaptive.activities.SplashActivity}" drawable="resicon_adaptive" />
+	<item component="ComponentInfo{com.simplified.gradient/com.simplified.gradient.activities.SplashActivity}" drawable="simplified_gradient" />
+	<item component="ComponentInfo{com.besome.sketch/com.besome.sketch.InitActivity}" drawable="sketchware"/>
+	<item component="ComponentInfo{org.woheller69.eggtimer/org.woheller69.eggtimer.MainActivity}" drawable="smart_eggtimer"/>
+	<item component="ComponentInfo{com.sonymobile.androidapp.cameraaddon.arfun/com.sonymobile.androidapp.cameraaddon.arfun.ARfunApp}" drawable="sony_ar_fun"/>
+	<item component="ComponentInfo{com.sonymobile.backgrounddefocus/com.sonymobile.backgrounddefocus.ViewFinderActivity}" drawable="sony_bokeh"/>
+	<item component="ComponentInfo{com.sony.motionshot/com.sony.motionshot.record.RecordActivity}" drawable="sony_motion_shot"/>
+	<item component="ComponentInfo{com.zhenxiang.superimage/com.zhenxiang.superimage.MainActivity}" drawable="superimage"/>
+	<item component="ComponentInfo{com.danvelazco.fbwrapper/com.danvelazco.fbwrapper.FbWrapper}" drawable="tinfoil_for_facebook"/>
+	<item component="ComponentInfo{org.afrikalan.tuxMath.game/org.afrikalan.tuxMath.game.test}" drawable="tux_math"/>
+	<item component="ComponentInfo{com.samruston.converter/com.samruston.converter.ui.MainActivity}" drawable="unit_lab"/>
+	<item component="ComponentInfo{com.camel.corp.universalcopy/com.camel.corp.universalcopy.SettingsActivity}" drawable="universal_copy"/>
+	<item component="ComponentInfo{com.camel.corp.universalcopy/com.camel.corp.universalcopy.settings.SettingsActivity}" drawable="universal_copy"/>
+	<item component="ComponentInfo{org.vita3k.emulator/org.vita3k.emulator.Emulator}" drawable="vita3k"/>
+	<item component="ComponentInfo{net.rgruet.android.g3watchdogpro/net.rgruet.android.g3watchdogpro.MainActivity}" drawable="watchdog"/>
+	<item component="ComponentInfo{net.rgruet.android.g3watchdog/net.rgruet.android.g3watchdog.Main}" drawable="watchdog"/>
+	<item component="ComponentInfo{net.rgruet.android.g3watchdogpro/net.rgruet.android.g3watchdogpro.Main}" drawable="watchdog"/>
+	<item component="ComponentInfo{net.rgruet.android.g3watchdog/net.rgruet.android.g3watchdog.MainActivity}" drawable="watchdog"/>
 </resources>
