--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -101,6 +101,48 @@
 	<item drawable="octohide_vpn" />
 	<item drawable="scandit_barcode_scanner" />
 	<item drawable="screenshot_recorder" />
+	<item drawable="angry_birds_evolution" />
+	<item drawable="angry_birds_stella" />
+	<item drawable="appmonster" />
+	<item drawable="aritycalc" />
+	<item drawable="asus_audiowizard" />
+	<item drawable="beats_rhythm" />
+	<item drawable="beatx" />
+	<item drawable="block_buster" />
+	<item drawable="cataclysm_dda" />
+	<item drawable="chess_clock" />
+	<item drawable="developer_widget" />
+	<item drawable="doodle_jump" />
+	<item drawable="dungeon_crawl_stone_soup" />
+	<item drawable="eka2l1" />
+	<item drawable="emacs" />
+	<item drawable="endless_sky" />
+	<item drawable="exif_thumbnail_adder" />
+	<item drawable="feudal_tactics" />
+	<item drawable="flare_rpg" />
+	<item drawable="godot" />
+	<item drawable="inmage" />
+	<item drawable="microsoft_defender" />
+	<item drawable="microsoft_solitaire_collection" />
+	<item drawable="nunti" />
+	<item drawable="pluma_rss" />
+	<item drawable="quick_cursor" />
+	<item drawable="railway_station_photos" />
+	<item drawable="recticons" />
+	<item drawable="resicon_adaptive" />
+	<item drawable="simplified_gradient" />
+	<item drawable="sketchware" />
+	<item drawable="smart_eggtimer" />
+	<item drawable="sony_ar_fun" />
+	<item drawable="sony_bokeh" />
+	<item drawable="sony_motion_shot" />
+	<item drawable="superimage" />
+	<item drawable="tinfoil_for_facebook" />
+	<item drawable="tux_math" />
+	<item drawable="unit_lab" />
+	<item drawable="universal_copy" />
+	<item drawable="vita3k" />
+	<item drawable="watchdog" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -1826,11 +1868,13 @@
 	<item drawable="ango" />
 	<item drawable="angry_birds" />
 	<item drawable="angry_birds_action" />
+	<item drawable="angry_birds_evolution" />
 	<item drawable="angry_birds_friends" />
 	<item drawable="angry_birds_rio" />
 	<item drawable="angry_birds_seasons" />
 	<item drawable="angry_birds_space" />
 	<item drawable="angry_birds_star_wars" />
+	<item drawable="angry_birds_stella" />
 	<item drawable="angry_birds_transformers" />
 	<item drawable="angry_birds_two" />
 	<item drawable="anidroid" />
@@ -1909,6 +1953,7 @@
 	<item drawable="appbar" />
 	<item drawable="appblock" />
 	<item drawable="appdetox" />
+	<item drawable="appmonster" />
 	<item drawable="apple_flinger" />
 	<item drawable="apple_music" />
 	<item drawable="applicationreader" />
@@ -1947,6 +1992,7 @@
 	<item drawable="argos" />
 	<item drawable="aria2android" />
 	<item drawable="aria2app" />
+	<item drawable="aritycalc" />
 	<item drawable="ariva_de" />
 	<item drawable="ark" />
 	<item drawable="arknights" />
@@ -1984,6 +2030,7 @@
 	<item drawable="astro" />
 	<item drawable="astro_go" />
 	<item drawable="astrozeit24" />
+	<item drawable="asus_audiowizard" />
 	<item drawable="asus_mobile_manager" />
 	<item drawable="asus_quick_memo" />
 	<item drawable="asus_router" />
@@ -2178,7 +2225,9 @@
 	<item drawable="beat_hazard_2" />
 	<item drawable="beat_stomper" />
 	<item drawable="beats" />
+	<item drawable="beats_rhythm" />
 	<item drawable="beatstar" />
+	<item drawable="beatx" />
 	<item drawable="beauty_plus" />
 	<item drawable="becu" />
 	<item drawable="beebom" />
@@ -2297,6 +2346,7 @@
 	<item drawable="blinkit" />
 	<item drawable="blitz_esports" />
 	<item drawable="blitzer_de" />
+	<item drawable="block_buster" />
 	<item drawable="blockchain" />
 	<item drawable="blockfi" />
 	<item drawable="blockfolio" />
@@ -2526,6 +2576,7 @@
 	<item drawable="castro" />
 	<item drawable="cat_bird" />
 	<item drawable="cat_bus" />
+	<item drawable="cataclysm_dda" />
 	<item drawable="catcode" />
 	<item drawable="cathode" />
 	<item drawable="catholicmatch" />
@@ -2580,6 +2631,7 @@
 	<item drawable="chelsea_fc" />
 	<item drawable="chemistry_x10" />
 	<item drawable="chess" />
+	<item drawable="chess_clock" />
 	<item drawable="chess_tempo" />
 	<item drawable="chessboard" />
 	<item drawable="chessis" />
@@ -2964,6 +3016,7 @@
 	<item drawable="dev_tools" />
 	<item drawable="devcheck" />
 	<item drawable="developer_console" />
+	<item drawable="developer_widget" />
 	<item drawable="deviant__art" />
 	<item drawable="device_connect" />
 	<item drawable="device_id" />
@@ -3054,6 +3107,7 @@
 	<item drawable="donut_kwgt" />
 	<item drawable="doodle" />
 	<item drawable="doodle_live_wallpapers" />
+	<item drawable="doodle_jump" />
 	<item drawable="doordash" />
 	<item drawable="dooz" />
 	<item drawable="doppelreim" />
@@ -3122,6 +3176,7 @@
 	<item drawable="duet" />
 	<item drawable="dumb_ways" />
 	<item drawable="dune" />
+	<item drawable="dungeon_crawl_stone_soup" />
 	<item drawable="dungeons_of_dreadrock" />
 	<item drawable="dunkin" />
 	<item drawable="dunzo" />
@@ -3194,6 +3249,7 @@
 	<item drawable="egov_mobile" />
 	<item drawable="ehviewer" />
 	<item drawable="einkbro" />
+	<item drawable="eka2l1" />
 	<item drawable="eksi_sozluk" />
 	<item drawable="electrolux" />
 	<item drawable="electron" />
@@ -3203,6 +3259,7 @@
 	<item drawable="elemnt" />
 	<item drawable="elevate" />
 	<item drawable="ella_thegame" />
+	<item drawable="emacs" />
 	<item drawable="emag" />
 	<item drawable="email_by_edison" />
 	<item drawable="emb_three_d" />
@@ -3218,6 +3275,7 @@
 	<item drawable="end" />
 	<item drawable="endel" />
 	<item drawable="endive" />
+	<item drawable="endless_sky" />
 	<item drawable="endomondo" />
 	<item drawable="energize" />
 	<item drawable="energy" />
@@ -3288,6 +3346,7 @@
 	<item drawable="exagear" />
 	<item drawable="exercise_timer" />
 	<item drawable="exif_eraser" />
+	<item drawable="exif_thumbnail_adder" />
 	<item drawable="exito" />
 	<item drawable="exodus" />
 	<item drawable="exoplayer" />
@@ -3376,6 +3435,7 @@
 	<item drawable="fennec" />
 	<item drawable="fern_flower" />
 	<item drawable="fetch_rewards" />
+	<item drawable="feudal_tactics" />
 	<item drawable="ffshare" />
 	<item drawable="ffupdater" />
 	<item drawable="ffxiv_companion" />
@@ -3437,6 +3497,7 @@
 	<item drawable="fl_studio" />
 	<item drawable="flamingo_for_twitter" />
 	<item drawable="flappy_bird" />
+	<item drawable="flare_rpg" />
 	<item drawable="flash__fire" />
 	<item drawable="flashcard_maker" />
 	<item drawable="flashify" />
@@ -3706,6 +3767,7 @@
 	<item drawable="go_launcher" />
 	<item drawable="goat" />
 	<item drawable="gobiz" />
+	<item drawable="godot" />
 	<item drawable="godville" />
 	<item drawable="gojek" />
 	<item drawable="goldex" />
@@ -4069,6 +4131,7 @@
 	<item drawable="ing_smart_secure" />
 	<item drawable="ingress" />
 	<item drawable="injustice" />
+	<item drawable="inmage" />
 	<item drawable="innertune" />
 	<item drawable="inoreader" />
 	<item drawable="inpost" />
@@ -4795,6 +4858,7 @@
 	<item drawable="microsoft_azure" />
 	<item drawable="microsoft_bing" />
 	<item drawable="microsoft_bookings" />
+	<item drawable="microsoft_defender" />
 	<item drawable="microsoft_edge" />
 	<item drawable="microsoft_edge_canary" />
 	<item drawable="microsoft_edge_dev" />
@@ -4820,6 +4884,7 @@
 	<item drawable="microsoft_powerpoint" />
 	<item drawable="microsoft_remote_desktop" />
 	<item drawable="microsoft_sharepoint" />
+	<item drawable="microsoft_solitaire_collection" />
 	<item drawable="microsoft_stream" />
 	<item drawable="microsoft_surface_audio" />
 	<item drawable="microsoft_teams" />
@@ -5353,6 +5418,7 @@
 	<item drawable="num" />
 	<item drawable="numbrs" />
 	<item drawable="numworks" />
+	<item drawable="nunti" />
 	<item drawable="nutaku" />
 	<item drawable="nvidia_geforce_now" />
 	<item drawable="nvidia_shield_tv" />
@@ -5781,6 +5847,7 @@
 	<item drawable="plex" />
 	<item drawable="plex_dash" />
 	<item drawable="plexamp" />
+	<item drawable="pluma_rss" />
 	<item drawable="plumble" />
 	<item drawable="plumble_free" />
 	<item drawable="pluot" />
@@ -5977,6 +6044,7 @@
 	<item drawable="queuebee" />
 	<item drawable="quick__pic" />
 	<item drawable="quick_calculation" />
+	<item drawable="quick_cursor" />
 	<item drawable="quick_edit" />
 	<item drawable="quick_for_wear" />
 	<item drawable="quick_math" />
@@ -6020,6 +6088,7 @@
 	<item drawable="radioupnp" />
 	<item drawable="raiffeisen" />
 	<item drawable="railcard" />
+	<item drawable="railway_station_photos" />
 	<item drawable="rain_sounds" />
 	<item drawable="rainbow_six_mobile" />
 	<item drawable="raindrop" />
@@ -6071,6 +6140,7 @@
 	<item drawable="rec_room" />
 	<item drawable="recon_x" />
 	<item drawable="recorrido" />
+	<item drawable="recticons" />
 	<item drawable="red" />
 	<item drawable="red__reader" />
 	<item drawable="red_ball_four" />
@@ -6115,6 +6185,7 @@
 	<item drawable="replit" />
 	<item drawable="rescuetime_classic" />
 	<item drawable="reserve" />
+	<item drawable="resicon_adaptive" />
 	<item drawable="resicon_flat" />
 	<item drawable="residualvm" />
 	<item drawable="resilio_sync" />
@@ -6492,6 +6563,7 @@
 	<item drawable="simplenote" />
 	<item drawable="simpletask" />
 	<item drawable="simplex" />
+	<item drawable="simplified_gradient" />
 	<item drawable="simplified_material" />
 	<item drawable="simplisafe" />
 	<item drawable="simplr" />
@@ -6506,6 +6578,7 @@
 	<item drawable="skagen_connected" />
 	<item drawable="skater" />
 	<item drawable="sketchbook" />
+	<item drawable="sketchware" />
 	<item drawable="skillshare" />
 	<item drawable="skit" />
 	<item drawable="skitto" />
@@ -6556,6 +6629,7 @@
 	<item drawable="smart_autoclicker" />
 	<item drawable="smart_caller" />
 	<item drawable="smart_edge" />
+	<item drawable="smart_eggtimer" />
 	<item drawable="smart_fit" />
 	<item drawable="smart_flasher" />
 	<item drawable="smart_launcher" />
@@ -6625,9 +6699,12 @@
 	<item drawable="sonic_time_twisted" />
 	<item drawable="sonos" />
 	<item drawable="sony_ar_effect" />
+	<item drawable="sony_ar_fun" />
+	<item drawable="sony_bokeh" />
 	<item drawable="sony_cinema_pro" />
 	<item drawable="sony_game_enhancer" />
 	<item drawable="sony_headphones_connect" />
+	<item drawable="sony_motion_shot" />
 	<item drawable="sony_photography_pro" />
 	<item drawable="sony_sketch" />
 	<item drawable="sony_support" />
@@ -6828,6 +6905,7 @@
 	<item drawable="super_status_bar" />
 	<item drawable="supercluster" />
 	<item drawable="superfreezz" />
+	<item drawable="superimage" />
 	<item drawable="supersu" />
 	<item drawable="supertux" />
 	<item drawable="supertuxkart" />
@@ -7078,6 +7156,7 @@
 	<item drawable="tinc_app" />
 	<item drawable="tinder" />
 	<item drawable="tinder_lite" />
+	<item drawable="tinfoil_for_facebook" />
 	<item drawable="ting" />
 	<item drawable="tinkoff" />
 	<item drawable="tinkoff_invest" />
@@ -7251,6 +7330,7 @@
 	<item drawable="tusky" />
 	<item drawable="tutanota" />
 	<item drawable="tutu" />
+	<item drawable="tux_math" />
 	<item drawable="tux_paint" />
 	<item drawable="tux_paint_config" />
 	<item drawable="tux_rider" />
@@ -7333,10 +7413,12 @@
 	<item drawable="unipatcher" />
 	<item drawable="uniqlo" />
 	<item drawable="unit_converter_ultimate" />
+	<item drawable="unit_lab" />
 	<item drawable="unit_pro" />
 	<item drawable="united_airlines" />
 	<item drawable="united_we_stream_berlin" />
 	<item drawable="unitto" />
+	<item drawable="universal_copy" />
 	<item drawable="university_of_michigan" />
 	<item drawable="uniwhere" />
 	<item drawable="unlauncher" />
@@ -7460,6 +7542,7 @@
 	<item drawable="visual_timer" />
 	<item drawable="visualis" />
 	<item drawable="vita" />
+	<item drawable="vita3k" />
 	<item drawable="viu" />
 	<item drawable="vivacut" />
 	<item drawable="vivaldi" />
@@ -7568,6 +7651,7 @@
 	<item drawable="wash" />
 	<item drawable="washington_post" />
 	<item drawable="watcha_pedia" />
+	<item drawable="watchdog" />
 	<item drawable="water_me" />
 	<item drawable="wateria" />
 	<item drawable="watermelon_kwgt" />
