--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11127,4 +11127,8 @@
 	<item component="ComponentInfo{net.rgruet.android.g3watchdogpro/net.rgruet.android.g3watchdogpro.Main}" drawable="watchdog"/>
 	<item component="ComponentInfo{net.rgruet.android.g3watchdog/net.rgruet.android.g3watchdog.MainActivity}" drawable="watchdog"/>
 	<item component="ComponentInfo{com.kubix.creative/com.kubix.creative.activity.IntroActivity}" drawable="creativeapp" />
+	<calendar component="ComponentInfo{org.leafos.etar/com.android.calendar.AllInOneActivity}" prefix="calendar_" />
+	<item component="ComponentInfo{com.shopee.cl/com.shopee.app.ui.home.HomeActivity_}" drawable="shopee" />
+	<item component="ComponentInfo{com.crdroid.music/com.kabouzeid.gramophone.ui.activities.MainActivity}" drawable="music" />
+	<item component="ComponentInfo{com.shopee.foody.driver.th/com.shopee.foody.driver.splash.SplashActivity}" drawable="shopeefood" />
 </resources>
