Rephrased icon pack description

--- a/app/src/main/res/values/dashboard_configurations.xml
+++ b/app/src/main/res/values/dashboard_configurations.xml
@@ -74,11 +74,9 @@
         -->
     <string name="home_description">
         <![CDATA[
-            <p>It is an <a href="https://github.com/Delta-Icons/android">open source</a> pastel coloured icon pack.</p>
+            <p>Delta is an <a href="https://github.com/Delta-Icons/android">open source</a> pastel icon pack created by <a href="https://leifs.website">Leif Niemczik</a> and maintained by <a href="https://github.com/Delta-Icons/android/graphs/contributors">awesome people</a>.</p>
             <br>
-            <p>Created by <a href="https://leifs.website">Leif Niemczik</a> and helped by <a href="https://github.com/Delta-Icons/android/graphs/contributors">awesome people</a>.</p>
-            <br>
-            <p>Feel free to <a href="https://discord.gg/F9RFqHN">join our Discord server</a> if you need help contributing or just want to chat with other contributors. By the way, the server is not intended for icon requests!</p>
+            <p>Feel free to <a href="https://discord.gg/F9RFqHN">join our Discord server</a> if you need help contributing or just want to chat with other contributors. The server is <b>not</b> intended for icon requests.</p>
         ]]>
     </string>
 
