--- a/app/src/main/res/values/dashboard_faqs.xml
+++ b/app/src/main/res/values/dashboard_faqs.xml
@@ -61,7 +61,7 @@
     <string-array name="answers">
         <item>The launcher is the part of the Android user interface that lets users customize their home screen,
             launch applications, make phone calls, and perform other tasks on Android devices.</item>
-        <item>A set of graphics that will change the look of your app drawer icons</item>
+        <item>An icon pack is a set of graphics that will change the look of your app drawer icons.</item>
         <item>You will need a launcher that supports custom icon packs.
             Supported launchers are listed in Delta\'s Play Store description.
             If you are confused on which launchers should be used, just go to the \"Apply\" section, and install a launcher from there.</item>
