--- a/app/src/main/res/values/dashboard_faqs.xml
+++ b/app/src/main/res/values/dashboard_faqs.xml
@@ -76,7 +76,7 @@
 <!--        <item>You can open navigation drawer then open \"Icon Request\".</item>-->
 <!--        <item>You can open navigation drawer then open \"Settings\", choose \"Restore Purchases\".-->
 <!--            If you had remaining Premium Requests before reinstalling, they will be restored.</item>-->
-        <item>This occurred because Delta was moved to SD Card storage, you should install it into internal memory.</item>
+        <item>This occurred because Delta was moved to SD Card storage. You should install it into internal memory.</item>
         <item>The problem might come from the way your launcher handles large icon resolutions.
        	    You can fix it by increasing the icon size to 115-120%.
        	    Alternatively, you can change your launcher.</item>
