Add Bang Dream Components for different regions

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11129,4 +11129,8 @@
 	<item component="ComponentInfo{zombie.survival.craft.z/ru.kv3dunityext.permissions.MainActivity}" drawable="last_day_on_earth_survival" />
 	<item component="ComponentInfo{zte.com.cn.alarmclock/zte.com.cn.alarmclock.activity.AlarmClockActivity}" drawable="clock" />
 	<item component="ComponentInfo{zte.com.cn.filer/zte.com.cn.filer.FileMgrActivity}" drawable="file_manager" />
+	<item component="ComponentInfo{jp.co.craftegg.band/com.google.firebase.MessagingUnityPlayerActivity}" drawable="bang_dream" />
+	<item component="ComponentInfo{net.gamon.bdTW/com.google.firebase.MessagingUnityPlayerActivity}" drawable="bang_dream" />
+	<item component="ComponentInfo{com.bilibili.bangdream.aligames/com.bilibili.star.bili.PermissionActivity}" drawable="bang_dream" />
+	<item component="ComponentInfo{com.kakaogames.bangdreamkr/com.kakaogame.KGUnityPlayerActivity}" drawable="bang_dream" />
 </resources>
