Add Applist Detector

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11133,4 +11133,5 @@
 	<item component="ComponentInfo{net.gamon.bdTW/com.google.firebase.MessagingUnityPlayerActivity}" drawable="bang_dream" />
 	<item component="ComponentInfo{com.bilibili.bangdream.aligames/com.bilibili.star.bili.PermissionActivity}" drawable="bang_dream" />
 	<item component="ComponentInfo{com.kakaogames.bangdreamkr/com.kakaogame.KGUnityPlayerActivity}" drawable="bang_dream" />
+	<item component="ComponentInfo{icu.nullptr.applistdetector/icu.nullptr.applistdetector.MainActivity}" drawable="applist_detector" />
 </resources>
