--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -8,6 +8,7 @@
 	<item drawable="alkitab" />
 	<item drawable="ad_free" />
 	<item drawable="anpaside" />
+	<item drawable="applist_detector" />
 	<item drawable="artifact" />
 	<item drawable="bettersleep" />
 	<item drawable="biedronka" />
@@ -1965,6 +1966,7 @@
 	<item drawable="apple_music" />
 	<item drawable="applicationreader" />
 	<item drawable="applications_info" />
+	<item drawable="applist_detector" />
 	<item drawable="applock" />
 	<item drawable="appmgr_iii" />
 	<item drawable="appsales" />
